@@ -13,7 +13,7 @@ AC_PROG_CPP
 
 AM_PROG_LIBTOOL
 AC_PROG_INSTALL
-AC_PROG_RANLIB
+dnl AC_PROG_RANLIB ;# `AC_PROG_RANLIB' is rendered obsolete by `AM_PROG_LIBTOOL'
 
 dnl Check for system libs needed
 
